tests/cases/smoke/valid/bindings_basic.ty
const MAX_USERS = 100
var count = 0
count = count + 1
