tests/cases/smoke/invalid/expr_index_non_list.ty
var value = 1
var bad = value[0]
